--- a/index.html
+++ b/index.html
@@ -6,28 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/css.css">
   <link rel="icon" href="imgn/pesca.png">
-  <title>PescaIndalo</title>
+  <title>PescaIndalo - Pesca a otro nivel</title>
 </head>
 
 
 <body>
 
-  <header class="Encabezado">
-
-    <!--<img class="imgenc" src="/imgn/pesca.png">-->
-    <div>
-      <h1>PescaIndalo</h1>
-    </div>
-  
+  <header class="Encabezado">  
     <!--Barra de navegación-->
     <div class="nav-b">
-      <nav class="nav-prin contenedor">
-        <a href="index.html">Inicio</a>
-        <a href="/sub/modalidades.html">Modalidades</a>
-        <a href="/sub/recomendaciones.html">Recomendaciones</a>
-        <a href="/sub/torneos.html">Torneos</a>
-        <a href="/sub/mapa.html">Mapa</a>
-        <a href="/sub/blog.html">Blog</a>
+      <nav class="navbar">
+        <img class="navbar__web-logo" src="./imgn/pesca.png">
+        <h1 class="navbar__title">PescaIndalo</h1>
+        <a class="navbar__element" href="index.html">Inicio</a>
+        <a class="navbar__element" href="/sub/modalidades.html">Modalidades</a>
+        <a class="navbar__element" href="/sub/recomendaciones.html">Recomendaciones</a>
+        <a class="navbar__element" href="/sub/torneos.html">Torneos</a>
+        <a class="navbar__element" href="/sub/mapa.html">Mapa</a>
+        <a class="navbar__element" href="/sub/blog.html">Blog</a>
       </nav>
     </div>
   </header>
@@ -37,7 +33,7 @@
   <main class="sombra contenedor">
     <section>
       <div class="hbienvenida">
-        <h3>Bienvenido a PescaIndalo,tu web de pesca en Almería</h3>
+        <h3>Bienvenido a PescaIndalo, tu web de pesca en Almería</h3>
       </div>
       <div class="textbvn cajatext">
         <p>
