--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/css.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="icon" href="imgn/pesca.png">
   <title>PescaIndalo - Pesca a otro nivel</title>
 </head>
@@ -12,7 +12,7 @@
 
 <body>
 
-  <header class="Encabezado">  
+  <header>  
     <!--Barra de navegación-->
     <div class="nav-b">
       <nav class="navbar">
@@ -30,21 +30,23 @@
   
 
   <!--Bienvenida-->
+
   <main class="sombra contenedor">
-    <section>
-      <div class="hbienvenida">
-        <h3>Bienvenido a PescaIndalo, tu web de pesca en Almería</h3>
-      </div>
-      <div class="textbvn cajatext">
-        <p>
-          En esta web podras encontrar informacion sobre las diferentes
-          Modalidades de pesca,recomendaciones de utensilios y cebo, un blog con
-          guias,ademas podras encontrar un mapa con las zonas de pesca en
-          Almería junto la prevision meteorologica de la zonas y un calendario
-          con los Torneos que habra en la provincia de Almeria
-        </p>
+    <section class="bienvenida">
+      <div>
+      <h1 class="bienvenida__titulo">Tu tienda de pesca en Almería</h1>
+      <p>
+        Productos locales para tu disfrute en la pesca. Especializados en distintas modalidades
+        de pesca y en la venta online. Además, podrás encontrar un mapa con las zonas de pesca
+        en Almería, junto con la previsión meteorológica. 
+
+        <p><button class="bienvenida__button">Conoce más </button></p>
+    </div>
+      <div>
+        <img class="bienvenida__img" src="./imgn/spinningimg.jpg"
       </div>
     </section>
+
     <section class="midprin caja">
       <h2 class="titprin">Secciones Principales</h2>
       <div class="sec1">
