Finished index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
   <link rel="icon" href="imgn/pesca.png">
   <script src="https://kit.fontawesome.com/323147442d.js" crossorigin="anonymous"></script>
   <title>PescaIndalo - Pesca a otro nivel</title>
@@ -14,7 +14,6 @@
 <body>
 
   <header>  
-    <!--Barra de navegación-->
     <div class="nav-b">
       <nav class="navbar">
         <img alt="web logo" class="navbar__web-logo" src="./imgn/pesca.png">
@@ -49,31 +48,32 @@
 
 
     <section class="sections">
+
       <div class="section__card">
-        <a class="card__link" href="./sub/recomendaciones.html">
-          <h1 class="card__title" href="./sub/recomendaciones.html">Recomendaciones <i class="fa-solid fa-thumbs-up"></i></h1>
-          <p class="card__description">Mira nuestras recomendaciones sobre los equipos de pesca.</p>
+        <a class="card__link" href="./sub/modalidades.html">
+          <h1 class="card__title" href="./sub/recomendaciones.html">Modalidades <i class="title__icon fa-solid fa-list"></i></h1>
+          <p class="card__description">Mira las modalidades de pesca en orilla existentes e infórmate sobre ellas. Tenemos <b>Surfcasting, pesca con flotador, Spinning y Rockfishing.</b></p>
         </a>
       </div>
 
       <div class="section__card">
         <a class="card__link" href="./sub/recomendaciones.html">
-          <h1 class="card__title" href="./sub/recomendaciones.html">Recomendaciones <i class="fa-solid fa-thumbs-up"></i></h1>
+          <h1 class="card__title" href="./sub/recomendaciones.html">Recomendaciones <i class="title__icon fa-solid fa-thumbs-up"></i></h1>
           <p class="card__description">Mira nuestras recomendaciones sobre los equipos de pesca.</p>
         </a>
       </div>
 
       <div class="section__card">
-        <a class="card__link" href="./sub/recomendaciones.html">
-          <h1 class="card__title" href="./sub/recomendaciones.html">Recomendaciones <i class="fa-solid fa-thumbs-up"></i></h1>
-          <p class="card__description">Mira nuestras recomendaciones sobre los equipos de pesca.</p>
+        <a class="card__link" href="./sub/torneos.html">
+          <h1 class="card__title" href="./sub/recomendaciones.html">Torneos <i class="title__icon fa-solid fa-trophy"></i></i></h1>
+          <p class="card__description">Mira todas los próximos torneos que se celebrarán por toda la provincia de Almería</p>
         </a>
       </div>
 
       <div class="section__card">
-        <a class="card__link" href="./sub/recomendaciones.html">
-          <h1 class="card__title" href="./sub/recomendaciones.html">Recomendaciones <i class="fa-solid fa-thumbs-up"></i></h1>
-          <p class="card__description">Mira nuestras recomendaciones sobre los equipos de pesca.</p>
+        <a class="card__link" href="./sub/mapa.html">
+          <h1 class="card__title" href="./sub/recomendaciones.html">Mapa <i class="title__icon fa-solid fa-map-location"></i></h1>
+          <p class="card__description">Mira las zonas de pesca autorizadas por toda la provincia de Almería.</p>
         </a>
       </div>
 <!--
