--- a/sub/torneos.html
+++ b/sub/torneos.html
@@ -4,29 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../imgn/pesca.png">
-    <link rel="stylesheet" href="../css/css.css">
-    <link rel="stylesheet" href="../css/torn.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>PescaIndalo</title>
 </head>
 
 <body>
-    <header class="Encabezado">
-        <div>
-          <h1>PescaIndalo</h1>
-        </div>
-      
-        <!--Barra de navegación-->
-        <div class="nav-b">
-          <nav class="nav-prin contenedor">
-            <a href="../index.html">Inicio</a>
-            <a href="/sub/modalidades.html">Modalidades</a>
-            <a href="/sub/recomendaciones.html">Recomendaciones</a>
-            <a href="/sub/torneos.html">Torneos</a>
-            <a href="/sub/mapa.html">Mapa</a>
-            <a href="/sub/blog.html">Blog</a>
-          </nav>
-        </div>
-      </header>
+  <header>  
+    <div class="nav-b">
+      <nav class="navbar">
+        <img alt="web logo" class="navbar__web-logo" src="./imgn/pesca.png">
+        <h1 class="navbar__title">PescaIndalo</h1>
+        <a class="navbar__element" href="./index.html">Inicio</a>
+        <a class="navbar__element" href="./sub/modalidades.html">Modalidades</a>
+        <a class="navbar__element" href="./sub/recomendaciones.html">Recomendaciones</a>
+        <a class="navbar__element" href="./sub/torneos.html">Torneos</a>
+        <a class="navbar__element" href="./sub/mapa.html">Mapa</a>
+      </nav>
+    </div>
+  </header>
       <!--Creacion de la tabla-->
       <table>
         <caption>Calendario de Junio</caption>
