--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <div class="section__card">
         <a class="card__link" href="./sub/torneos.html">
-          <h1 class="card__title" href="./sub/recomendaciones.html">Torneos <i class="title__icon fa-solid fa-trophy"></i></i></h1>
+          <h1 class="card__title" href="./sub/recomendaciones.html">Torneos <i class="title__icon fa-solid fa-trophy"></i></h1>
           <p class="card__description">Mira todas los próximos torneos que se celebrarán por toda la provincia de Almería</p>
         </a>
       </div>
@@ -76,38 +76,6 @@
           <p class="card__description">Mira las zonas de pesca autorizadas por toda la provincia de Almería.</p>
         </a>
       </div>
-<!--
-      <div class="sec2">
-        <a href="/sub/torneos.html">Torneos</a>
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trophy-filled" width="48"
-          height="48" viewBox="0 0 24 24" stroke-width="2.5" stroke="#000000" fill="none" stroke-linecap="round"
-          stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path
-            d="M17 3a1 1 0 0 1 .993 .883l.007 .117v2.17a3 3 0 1 1 0 5.659v.171a6.002 6.002 0 0 1 -5 5.917v2.083h3a1 1 0 0 1 .117 1.993l-.117 .007h-8a1 1 0 0 1 -.117 -1.993l.117 -.007h3v-2.083a6.002 6.002 0 0 1 -4.996 -5.692l-.004 -.225v-.171a3 3 0 0 1 -3.996 -2.653l-.003 -.176l.005 -.176a3 3 0 0 1 3.995 -2.654l-.001 -2.17a1 1 0 0 1 1 -1h10zm-12 5a1 1 0 1 0 0 2a1 1 0 0 0 0 -2zm14 0a1 1 0 1 0 0 2a1 1 0 0 0 0 -2z"
-            stroke-width="0" fill="currentColor" />
-        </svg>
-        <p class="tsec2">En esta seccion podras ver los proximos torneos en la provincia de almeria</p>
-      </div>
-
-      <div class="sec3">
-        <a href="/sub/mapa.html">Mapa</a>
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" width="48" height="48"
-          viewBox="0 0 24 24" stroke-width="2.5" stroke="#000000" fill="none" stroke-linecap="round"
-          stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M12 18.5l-3 -1.5l-6 3v-13l6 -3l6 3l6 -3v7.5" />
-          <path d="M9 4v13" />
-          <path d="M15 7v5.5" />
-          <path
-            d="M21.121 20.121a3 3 0 1 0 -4.242 0c.418 .419 1.125 1.045 2.121 1.879c1.051 -.89 1.759 -1.516 2.121 -1.879z" />
-          <path d="M19 18v.01" />
-        </svg>
-        <p class="tsec3">En esta seccion podras ver las mejores zonas de pesca en la provincia</p>
-      </div>
-
-      <img  class="pescamain"  src="./imgn/ccmain.png">
--->
 </section>
 
   </main>
