--- a/sub/torneos.html
+++ b/sub/torneos.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../imgn/pesca.png">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/torneos.css">
+    <script src="https://kit.fontawesome.com/323147442d.js" crossorigin="anonymous"></script>
     <title>PescaIndalo</title>
 </head>
 
@@ -14,28 +16,27 @@
       <nav class="navbar">
         <img alt="web logo" class="navbar__web-logo" src="./imgn/pesca.png">
         <h1 class="navbar__title">PescaIndalo</h1>
-        <a class="navbar__element" href="./index.html">Inicio</a>
-        <a class="navbar__element" href="./sub/modalidades.html">Modalidades</a>
-        <a class="navbar__element" href="./sub/recomendaciones.html">Recomendaciones</a>
-        <a class="navbar__element" href="./sub/torneos.html">Torneos</a>
-        <a class="navbar__element" href="./sub/mapa.html">Mapa</a>
+        <a class="navbar__element" href="../index.html">Inicio</a>
+        <a class="navbar__element" href="../sub/modalidades.html">Modalidades</a>
+        <a class="navbar__element" href="../sub/recomendaciones.html">Recomendaciones</a>
+        <a class="navbar__element" href="../sub/torneos.html">Torneos</a>
+        <a class="navbar__element" href="../sub/mapa.html">Mapa</a>
       </nav>
     </div>
   </header>
       <!--Creacion de la tabla-->
-      <table>
-        <caption>Calendario de Junio</caption>
-        <thead>
+      <main class="content">
+      <table class="calendario">
+        <h1 class="calendario__mes">Calendario de Junio</h1>
           <tr>
-            <th>Domingo</th>
-            <th>Lunes</th>
-            <th>Martes</th>
-            <th>Miércoles</th>
-            <th>Jueves</th>
-            <th>Viernes</th>
-            <th>Sábado</th>
+            <th>Dom</th>
+            <th>Lun</th>
+            <th>Mar</th>
+            <th>Mie</th>
+            <th>Jue</th>
+            <th>Vie</th>
+            <th>Sab</th>
           </tr>
-        </thead>
         <tbody>
           <tr>
             <td></td>
@@ -86,8 +87,8 @@
         </tbody>
       </table>
       <!--Fechas de los proximos torneos-->
-      <div class="protor">
-        <h3>Proximos Torneos</h3>
+      <div class="torneos__fecha">
+        <h3>Proximos Torneos <i class="title__icon fa-solid fa-trophy"></i></h3>
         <ul>
             <li>Lunes 3/06/2024</li>
             <li>Sabado 6/07/2024</li>
@@ -98,10 +99,8 @@
 
       <img class="imgcopa"  src="/imgn/copa.png">
     
-
-      <footer class="paginap">
-        Diego Blanque Saavedra.Todos los derechos reservados.©
-      </footer>
+    </main>
+      <footer class="footer"><p class="footer__copyright">Diego Blanque Saavedra © 2024</p></footer>
 </body>
 
 </html>
