Modalidades y Recomendaciones [Finalizado]

--- a/sub/modalidades.html
+++ b/sub/modalidades.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../imgn/pesca.png">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css//modalidades.css">
     <title>PescaIndalo</title>
   </head>
   
@@ -13,7 +14,7 @@
         <header>  
           <div class="nav-b">
             <nav class="navbar">
-              <img alt="web logo" class="navbar__web-logo" src="./imgn/pesca.png">
+              <img alt="web logo" class="navbar__web-logo" src="../imgn/pesca.png">
               <h1 class="navbar__title">PescaIndalo</h1>
               <a class="navbar__element" href="../index.html">Inicio</a>
               <a class="navbar__element" href="../sub/modalidades.html">Modalidades</a>
@@ -24,10 +25,10 @@
           </div>
         </header>
         <main>
-          <h2>Modalidades de pesca en orilla</h2>
-        <section  class="cajatext contenedor">
-          <div>
-            <h3>Surfcasting</h3>
+          <h1 class="modalidad__title">Modalidades de pesca en orilla</h1>
+        <section class="modalidades">
+          <div class="modalidad__card">
+            <h1>Surfcasting</h1>
             <p>
               Es la modalidad de pesca mas extensa,las cañas de pescar que se
               suelen usar tienen una longitud de 3.8 a 5 metros y una potencia
@@ -37,11 +38,11 @@
               soporte y se debe mantener el sedal tenso para notar la picada.
             </p>
 
-            <img src="/imgn/surfcastingimg.jpg">
+            <img class="modalidad__img" src="../imgn/surfcastingimg.jpg">
           </div>
 
-          <div>
-            <h3>Pesca con flotador</h3>
+          <div class="modalidad__card">
+            <h1>Pesca con flotador</h1>
             <p>
               Para esta modalidad necesitaremos un aparejo con flotador que nos
               sirva de aviso en las picadas y un cebo,generalmente usaremos
@@ -50,11 +51,11 @@
               oleaje este calmado.Los sargos son los mas perseguidos en esta
               modalidad.
             </p>
-            <img src="/imgn/pescaflotadorimg.jpg">
+            <img class="modalidad__img" src="../imgn/pescaflotadorimg.jpg">
           </div>
 
-          <div>
-            <h3>Spinning</h3>
+          <div class="modalidad__card">
+            <h1>Spinning</h1>
           <p>
             Esta modalidad de pesca se basa en el uso de señuelos para pescar
             desde orilla. La ventaja que tiene el spinning es que podemos
@@ -63,16 +64,16 @@
             miden mas de 3 metros, esto nos permite lanzar y recoger rapidamente
             sin cansarnos.
           </p>
-          <img src="/imgn/spinningimg.jpg">
+          <img class="modalidad__img" src="../imgn/spinningimg.jpg">
         </div>
 
-          <div>
-            <h3>RockFishing</h3>
+          <div class="modalidad__card">
+            <h1>Rockfishing</h1>
             <p>
-              El rockfihing es practicamente igual al spinning pero se tendra
+              El rockfishing es practicamente igual al spinning pero se tendra
               que utilizar materiales ultraligeros y la accion de la caña no
               debera ser mayor a 30 gramos.
-              <img src="/imgn/rockfi.jpg">
+              <img class="modalidad__img" src="../imgn/rockfi.jpg">
             </p>
           </div>
         </section>
