--- a/sub/recomendaciones.html
+++ b/sub/recomendaciones.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css//recomendaciones.css" />
     <link rel="icon" href="../imgn/pesca.png">
+    <script src="https://kit.fontawesome.com/490963ac11.js" crossorigin="anonymous"></script>
     <title>PescaIndalo</title>
 </head>
 <body>
@@ -168,15 +169,221 @@
           <p>Recomendamos los siguientes cebos artificiales/señuelos:</p>
           <ol>
             <li>
-              <p><b>Vinilo de 13 CM Shadtex:</b>
-                Este señuelo ha sido diseñado para la pesca de depredadores en puestos con obstáculos.
+              <a href="https://www.decathlon.es/es/p/kit-vinilo-pesca-spinning-kit-shadtex-130-x-2/_/R-p-327789">Vinilo Pesca Spinning Kit Shadtex </a>
+               <p> Este señuelo ha sido diseñado para la pesca de depredadores en puestos con obstáculos.
               </p>
-
-
+            </li>
+            <li>
+              <a href="https://www.decathlon.es/es/p/kit-cucharillas-giratorias-pesca-de-depredadores-wero-new/_/R-p-171831">CUCHARILLAS GIRATORIAS PESCA WERO NEW</a>
+              <p>Kit formado por diferentes cucharillas tamaños nº 1 y nº 2
+              </p>
             </li>
           </ol>         
         </section>
 
+        <!--Anzuelos recomendados-->
+        <section class="cebos">
+          <h3>Anzuelos recomendados</h3>
+          <p>Recomendamos los siguientes anzuelos:</p>
+          <ol>
+            <li>
+              <a href="https://tienda.jata-sport.com/p/anzuelo-asari-black-tuna">AZUELO ASARI BLACK TUNA </a>
+             <p> El anzuelo Asari Black Tuna está recomendado para la pesca de grandes especies.
+              </p>
+            </li>
+            <li>
+              <a href="https://www.decathlon.es/es/p/anzuelos-pesca-mar-dorada-paleta/_/R-p-150260">Anzuelos Pesca Mar Dorada Paleta</a>
+              <p>Estos anzuelos están diseñados para la pesca de doradas con cebo natural
+              </p>
+            </li>
+          </ol>         
+        </section>
+
+        <!--Hilos recomendados-->
+        <section class="cebos">
+          <h3>Hilos recomendados</h3>
+          <p>Recomendamos los siguientes hilos:</p>
+          <ol>
+            <li>
+              <a href="https://www.pescacosmar.com/hilos-de-pescar/26-nylon-yuki-invisible-3g.html">YUKI INVISIBLE 3G </a>
+             <p> Buen hilo para principiante con una buena relacion calidad/precio
+              </p>
+            </li>
+            <li>
+              <a href="https://canamengual.com/inicio/1498-seguar-ace.html">SEAGUAR FINAL LINE</a>
+              <p>La línea Seaguar Final Line es un flourocarbono único en el mercado debido a su marcada elasticidad.
+                Es muy resistente y mantiene invariable la resistencia a la rotura, incluso tras largo tiempo en el agua.
+              </p>
+            </li>
+          </ol>         
+        </section>
+
+        <!--Plomos recomendados-->
+        <section class="cebos">
+          <h3>Plomos recomendados</h3>
+          <p>Recomendamos los siguientes Plomos:</p>
+          <ol>
+            <li>
+              <a href="https://www.decathlon.es/es/p/plomo-fondo-portugues-40-140gr-x3/_/R-p-X8536943">PLOMO FONDO PORTUGUES</a>
+             <p> Plomada polivalente para pescar en diferentes 
+              modalidades de pesca deportiva como surfcasting
+              </p>
+            </li>
+            <li>
+              <a href="https://www.decathlon.es/es/p/plomo-tubo-alas-60-120gr/_/R-p-X8536805">PLOMO TUBO ALAS</a>
+              <p>Plomo de  con tubo corredizo especial para la pesca en piedras o 
+                llanuras de alguero, por sus alas despega fácilmente del fondo.
+              </p>
+            </li>
+          </ol>         
+        </section>
+
+        
+
+        <h1>Equipamientos con precio mayor a 20 euros</h1>
+    <table class="equipamientos">
+       <tr>
+          <th>Código</th>
+          <th>Nombre</th>
+          <th>Descripción</th>
+          <th>Tipo</th>
+          <th>Precio</th>
+          <th>Peso</th>
+       </tr>
+       <tr>
+          <td>cp_42H</td>
+          <td> Daiwa SWEEPFIRE 42H </td>
+          <td> 
+              Esta es una caña excelente para principiantes,ofrece buenas prestaciones y su precio es de 75 euros
+          </td>
+          <td>Caña de pescar</td>
+          <td>75</td>
+          <td/>
+       </tr>
+       <tr>
+          <td>cp_os</td>
+          <td>ORUS SURF YUK</td>
+          <td>Esta caña esta pensada para jornadas largas de pesca</td>
+          <td>Caña de pescar</td>
+          <td>50</td>
+          <td/>
+       </tr>
+       <tr>
+          <td>cp_kn</td>
+          <td>Kali-Kunnan Nemesis</td>
+          <td>
+                  Es una excelente opción dentro de las cañas económicas,fabricadas en carbono y con 4,20 de longitud
+              </td>
+          <td>Caña de pescar</td>
+          <td>45</td>
+          <td/>
+       </tr>
+       <tr>
+          <td>hil_sfl</td>
+          <td>SEAGUAR FINAL LINE</td>
+          <td>
+              La línea Seaguar Final Line es un flourocarbono único en el mercado debido a su marcada elasticidad.
+              Es muy resistente y mantiene invariable la resistencia a la rotura, incluso tras largo tiempo en el agua.
+          </td>
+          <td>Hilo</td>
+          <td>27</td>
+          <td/>
+       </tr>
+    </table>
+
+
+    <h1>Cañas de pescar con precio mayor a 50 euros</h1>
+    <table class="mayor50">
+       <tr>
+          <th>Codigo</th>
+          <th>Nombre</th>
+          <th>Descripcion</th>
+          <th>Tipo</th>
+          <th>Precio</th>
+          <th>Peso</th>
+       </tr>
+       <tr>
+          <td>cp_42H</td>
+          <td> Daiwa SWEEPFIRE 42H </td>
+          <td> 
+              Esta es una caña excelente para principiantes,ofrece buenas prestaciones y su precio es de 75 euros
+          </td>
+          <td>Caña de pescar</td>
+          <td>75</td>
+          <td/>
+       </tr>
+       <tr>
+          <td>cp_ht</td>
+          <td>Hart Toro Taktik Popping FK</td>
+          <td>
+              está diseñada para la pesca de popping ligero, pero
+              cuenta con gran potencia para capturar atunes medianos. 
+              Permite lanzar señuelos ligeros y medianos con facilidad
+          </td>
+          <td>Caña de pescar</td>
+          <td>145</td>
+          <td/>
+       </tr>
+    </table>
+
+    
+      <h1>Detalles de  cp_42H</h1>
+      <table class="detallescp">
+        <tr>
+          <th>Nombre</th>
+          <th>Descripcion</th>
+          <th>Tipo</th>
+          <th>Precio</th>
+          <th>Peso</th>
+        </tr>
+        <tr>
+          <td> Daiwa SWEEPFIRE 42H </td>
+          <td> 
+                  Esta es una caña excelente para principiantes,ofrece buenas prestaciones y su precio es de 75 euros
+              </td>
+          <td>Caña de pescar</td>
+          <td>
+            <span style="color:green">75</span>
+          </td>
+          <td/>
+        </tr>
+      </table>
+    </body>
+
+    <h1>Lista de Cebos Vivos</h1>
+    <table class="vivceb">
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Descripcion</th>
+          <th>Precio</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td> Lombriz coreana </td>
+          <td>
+                Esta especie es muy apreciada para la pesca gracias a su vitalidad y amplio rango de presas potenciales. Debido a sus resistentes carnes
+                 y tamaño, es válido para diversas técnicas, como el lanzado pesado o el surfcasting.
+            </td>
+          <td>5</td>
+        </tr>
+        <tr>
+          <td>Lombriz americana</td>
+          <td>                        
+                Puede utilizarse entero para pescar espáridos, lubinas o lobinas al surfcasting o con flotador. 
+            </td>
+          <td>12</td>
+        </tr>
+        <tr>
+          <td>Tita mediana</td>
+          <td>                        
+                Cebo natural para pesca en agua salada adecuado para la pesca de dorada, herrera, sargo, lubina y otros peces.
+            </td>
+          <td>12</td>
+        </tr>
+      </tbody>
+    </table>
 
       </main>
       <footer class="footer"><p class="footer__copyright">Diego Blanque Saavedra © 2024</p></footer>
