--- a/sub/torneos.html
+++ b/sub/torneos.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="../imgn/pesca.png">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/torneos.css">
-    <script src="https://kit.fontawesome.com/323147442d.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/490963ac11.js" crossorigin="anonymous"></script>
     <title>PescaIndalo</title>
 </head>
 
@@ -14,7 +14,7 @@
   <header>  
     <div class="nav-b">
       <nav class="navbar">
-        <img alt="web logo" class="navbar__web-logo" src="./imgn/pesca.png">
+        <img alt="web logo" class="navbar__web-logo" src="../imgn/pesca.png">
         <h1 class="navbar__title">PescaIndalo</h1>
         <a class="navbar__element" href="../index.html">Inicio</a>
         <a class="navbar__element" href="../sub/modalidades.html">Modalidades</a>
@@ -98,6 +98,39 @@
       </div>
 
       <img class="imgcopa"  src="/imgn/copa.png">
+
+      <h1>Torneos Mixtos con precio menor a 10 euros</h1>
+      <table class="torneo">
+         <tr>
+            <th>Codigo</th>
+            <th>Nombre</th>
+            <th>Fecha</th>
+            <th>Zona</th>
+            <th>Mixto</th>
+            <th>Recomendaciones</th>
+            <th>Precio</th>
+         </tr>
+         <tr>
+            <td>comp03</td>
+            <td>Copa Arrecife</td>
+            <td>2024-08-26</td>
+            <td>zon03</td>
+            <td>SI</td>
+            <td>Si vienen menores de edad deben de ir acompañados de sus padres o su tutor legal</td>
+            <td>5</td>
+         </tr>
+         <tr>
+            <td>comp01</td>
+            <td>Copa Piston</td>
+            <td>2024-06-03</td>
+            <td>zon01</td>
+            <td>SI</td>
+            <td>
+                Traerse su propio cebo para la competicion
+            </td>
+            <td>7</td>
+         </tr>
+      </table>
     
     </main>
       <footer class="footer"><p class="footer__copyright">Diego Blanque Saavedra © 2024</p></footer>
