--- a/xml/XSLT/public_html/cañas_mas_50_euros/cañas_mas_50_euros.html
+++ b/xml/XSLT/public_html/cañas_mas_50_euros/cañas_mas_50_euros.html
@@ -4,12 +4,45 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to c
 Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this template
 -->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
+    
+   <head>
+      <title>Cañas de pescar con precio mayor a 50 euros</title>
+      <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+   </head>
+   <body>
+      <h1>Cañas de pescar con precio mayor a 50 euros</h1>
+      <table border="1">
+         <tr>
+            <th>Codigo</th>
+            <th>Nombre</th>
+            <th>Descripcion</th>
+            <th>Tipo</th>
+            <th>Precio</th>
+            <th>Peso</th>
+         </tr>
+         <tr>
+            <td>cp_42H</td>
+            <td> Daiwa SWEEPFIRE 42H </td>
+            <td> 
+                Esta es una caña excelente para principiantes,ofrece buenas prestaciones y su precio es de 75 euros
+            </td>
+            <td>Caña de pescar</td>
+            <td>75</td>
+            <td/>
+         </tr>
+         <tr>
+            <td>cp_ht</td>
+            <td>Hart Toro Taktik Popping FK</td>
+            <td>
+                está diseñada para la pesca de popping ligero, pero
+                cuenta con gran potencia para capturar atunes medianos. 
+                Permite lanzar señuelos ligeros y medianos con facilidad
+            </td>
+            <td>Caña de pescar</td>
+            <td>145</td>
+            <td/>
+         </tr>
+      </table>
+   </body>
 </html>
