--- a/sub/mapa.html
+++ b/sub/mapa.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/map.css" />
+    <script src="https://kit.fontawesome.com/490963ac11.js" crossorigin="anonymous"></script>
     <title>PescaIndalo</title>
 </head>
 <body>
