--- a/sub/modalidades.html
+++ b/sub/modalidades.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="../imgn/pesca.png">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css//modalidades.css">
+    <script src="https://kit.fontawesome.com/490963ac11.js" crossorigin="anonymous"></script>
     <title>PescaIndalo</title>
   </head>
   
@@ -78,7 +79,7 @@
           </div>
         </section>
 
-        <article class="blg">
+        <article class="bibliografia">
           <h4>Bibliografia</h4>
           <a href="https://espesca.com/de-costa/">https://espesca.com/de-costa/</a>
         </article>
