Cambios a tabla XSLT

--- a/sub/torneos.html
+++ b/sub/torneos.html
@@ -89,9 +89,9 @@
       <!--Fechas de los proximos torneos-->
       <div class="torneos__fecha">
         <h3>Proximos Torneos <i class="title__icon fa-solid fa-trophy"></i></h3>
-        <ul>
-            <li>Lunes 3/06/2024</li>
-            <li>Sabado 6/07/2024</li>
+        <ul class="torneos__ul">
+            <li>Lunes 03/06/2024</li>
+            <li>Sabado 06/07/2024</li>
             <li>Lunes 26/08/2024</li>
             <li>Viernes 16/08/2024</li>
         </ul>
@@ -99,38 +99,40 @@
 
       <img class="imgcopa"  src="/imgn/copa.png">
 
-      <h1>Torneos Mixtos con precio menor a 10 euros</h1>
-      <table class="torneo">
-         <tr>
-            <th>Codigo</th>
-            <th>Nombre</th>
-            <th>Fecha</th>
-            <th>Zona</th>
-            <th>Mixto</th>
-            <th>Recomendaciones</th>
-            <th>Precio</th>
-         </tr>
-         <tr>
-            <td>comp03</td>
-            <td>Copa Arrecife</td>
-            <td>2024-08-26</td>
-            <td>zon03</td>
-            <td>SI</td>
-            <td>Si vienen menores de edad deben de ir acompañados de sus padres o su tutor legal</td>
-            <td>5</td>
-         </tr>
-         <tr>
-            <td>comp01</td>
-            <td>Copa Piston</td>
-            <td>2024-06-03</td>
-            <td>zon01</td>
-            <td>SI</td>
-            <td>
-                Traerse su propio cebo para la competicion
-            </td>
-            <td>7</td>
-         </tr>
-      </table>
+      <div class="tabla__xslt">
+      <h1 class="xslt__titulo">Torneos Mixtos con precio menor a 10 euros</h1>
+      <table class="xslt__torneo torneo">
+        <tr>
+           <th>Codigo</th>
+           <th>Nombre</th>
+           <th>Fecha</th>
+           <th>Zona</th>
+           <th>Mixto</th>
+           <th>Recomendaciones</th>
+           <th>Precio</th>
+        </tr>
+        <tr>
+           <td>comp03</td>
+           <td>Copa Arrecife</td>
+           <td>2024-08-26</td>
+           <td>zon03</td>
+           <td>SI</td>
+           <td>Si vienen menores de edad deben de ir acompañados de sus padres o su tutor legal</td>
+           <td>5</td>
+        </tr>
+        <tr>
+           <td>comp01</td>
+           <td>Copa Piston</td>
+           <td>2024-06-03</td>
+           <td>zon01</td>
+           <td>SI</td>
+           <td>
+               Traerse su propio cebo para la competicion
+           </td>
+           <td>7</td>
+        </tr>
+     </table>
+    </div>
     
     </main>
       <footer class="footer"><p class="footer__copyright">Diego Blanque Saavedra © 2024</p></footer>
